# hdfs-xrootd-fallback-proj

./: LICENSE  Makefile  Makefile.in  NEWS  README  configure  configure.ac  hdfs-xrootd-fallback-proj.spec
autom4te.cache/: output.0  traces.0
hdfs-xrootd-fallback/: LICENSE  Makefile  Makefile.in  README  XrdBlockFetcher.cxx  configure  configure.ac  create_hdpatch.sh  extendable_client-with-thread-local-failures.patch  hdfs-mon-snatcher.pl  hdfs-xrootd-fallback.spec
hdfs-xrootd-fallback/autom4te.cache/: output.0  traces.0
hdfs-xrootd-fallback/config/: xfbfs-site.xml
hdfs-xrootd-fallback/org/xrootd/hdfs/fallback/: XFBFSClient.java  XrdUdpLog.java
hdfs-xrootd-fallback/src/: XrdBlockFetcher.cxx
hdfs-xrootd-fallback/src/org/xrootd/hdfs/fallback/: XFBFSInputStream.java  XrdBlockFetcher.java  XrdFallBackFileSystem.java
hdfs-xrootd-fbmon/: Makefile.in  configure  configure.ac
hdfs-xrootd-fbmon/autom4te.cache/: output.0  traces.0
hdfs-xrootd-fbmon/config/: hdfs-xrootd-fbmon.init  hdfs-xrootd-fbmon.logrotate  hdfs-xrootd-fbmon.sysconfig
hdfs-xrootd-fbmon/src/: hdfs-xrootd-fbmon  hdfs-xrootd-fbmon.in
hdfs-xrootd-healer/: Makefile  Makefile.in  configure  configure.ac  hdfs-xrootd-healer.cfg  hdfs-xrootd-healer.cfg.in  hdfs-xrootd-healer.cron  hdfs-xrootd-healer.init  hdfs_xrootd_healer.sh  hdfs_xrootd_healer.sh.in  square_pusher.sh
hdfs-xrootd-healer/autom4te.cache/: output.0  requests  traces.0
hdfs-xrootd-healer/config/: hdfs-xrootd-healer.cfg.in  hdfs-xrootd-healer.cron  hdfs-xrootd-healer.logrotate
hdfs-xrootd-healer/edu/ucsd/t2/hdfs/xrootd/healer/: Block.java  BlockHealer.java  Config.java  HdfsUtil.java  Logger.java
hdfs-xrootd-healer/src/: dumpCinfoRec.cc  hcopy.cxx  hcopy.sh.in  hdfs-xrootd-healer.in  hdfs-xrootd-hworker  hdfs-xrootd-hworker.in  hdfs_xrootd_healer.py  hdfs_xrootd_healer.sh.in  md5.cxx  md5.h
hdfs-xrootd-healer/src/edu/ucsd/t2/hdfs/xrootd/healer/: BlockHealer.java  Config.java  HdfsUtil.java
hdfs-xrootd-healer/src/hxrd/: util.py
