#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([hdfs-xrootd-fallback-proj], [1.0.0])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([hdfs-xrootd-fallback
                   hdfs-xrootd-healer
                   hdfs-xrootd-fbmon])
AC_OUTPUT
