#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([hdfs-xrootd-fbmon], [1.0.2])
AC_CONFIG_SRCDIR([src/hdfs-xrootd-fbmon.in])

# Checks for programs.
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
